kubernetes/apps/base/buzz/buzz/infra/servicemonitor-dragonfly.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dragonfly-buzz-metrics
  labels:
    app.kubernetes.io/name: dragonfly-buzz-metrics
    app.kubernetes.io/part-of: buzz
    monitoring.keiretsu.top/service: dragonfly-buzz
spec:
  selector:
    app: dragonfly-buzz
    app.kubernetes.io/name: dragonfly
    role: master
  ports:
    - name: admin
      port: 9999
      targetPort: admin
      protocol: TCP
